<resources>
    <string name="app_name">DLC</string>
    <string name="select_Action">Select Action</string>
    <string name="select_photo_from_gallery">select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
    <string name="net_connection">Please check your internet connection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="india">India</string>
    <string name="_91">+91</string>
    <string name="enter_your_mobile_no">Enter your mobile no.</string>
    <string name="we_ll_send_you_a_code_by_sms_to_confirm_your_mobile_number">We\'ll send you a code by SMS to confirm your mobile number.</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>
    <string name="clear_device_id">Clear Device ID?</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="verify_account">Verify Account</string>
    <string name="edit_mobile_number">Edit Mobile Number</string>
    <string name="resend_code">Resend Code</string>
    <string name="we_sent_an_sms_with_a_4_digit_code_to_919876543210">We sent an SMS with a 4-digit code to</string>
    <string name="what_s_your_name">What\'s your name</string>
    <string name="what_s_your_email_id">What\'s your email id</string>
    <string name="what_s_your_mobile_number">What\'s your mobile no.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="next">Next</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="search">Search</string>
    <string name="hello">Hello</string>
    <string name="hey">Hey</string>
    <string name="volume_1_a_c_in">Volume 1(A-C) in</string>
    <string name="english">English</string>
    <string name="_500">500</string>
    <string name="_800">800</string>
    <string name="_4_5">4.5</string>
    <string name="daily_quiz">Daily Quiz</string>
    <string name="are_you_ready_to_test_nyour_brain">Are you ready to test\nyour Brain?</string>
    <string name="play_now">Play Now</string>
    <string name="vocabulary_packages">Vocabulary Packages</string>
    <string name="more">More</string>
    <string name="grammar_packages">Grammar Packages</string>
    <string name="become_fluent_in_nenglish_with_us">Become Fluent In\nEnglish with us</string>
    <string name="learn_english_with_us_and_ntake_your_skils_to_the_next_level">Learn English With Us and\ntake your skils to the next level.</string>
    <string name="general_knowledge">General Packages</string>
    <string name="play_quiz_topic">Play Quiz Topic?</string>
    <string name="what_would_you_like_to">What would you like to</string>
    <string name="quiz">Quiz</string>
    <string name="free_demo_package">Free Demo Package</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="find_out_the_error_in_each_of_the_following_sentences_if_any_if_there_is_no_error_your_answer_is">Find out the error in each of the following sentences if any if there is no error your answerQuizQusModel is?</string>
    <string name="not_only_the_criminal">Not only the Criminal</string>
    <string name="skip">Skip</string>
    <string name="q1">Q1</string>
    <string name="_10">/10</string>
    <string name="_00">00</string>
    <string name="volume_1_a_c_in_english">Volume 1(A - C) in English</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="exp_date_20_03_2002">Exp. Date 20-03-2002</string>
    <string name="my_profile">My Profile</string>
    <string name="sumit">Sumit</string>
    <string name="sumit_gmail_com">Sumit@gmail.com</string>
    <string name="full_name">Full name</string>
    <string name="name">Name</string>
    <string name="gender">Gender:-</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="_9999990000">9999990000</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth:-</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="parent_contact">Parent Contact</string>
    <string name="_8899770066">8899770066</string>
    <string name="address">Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="_8_subject">8 Subject</string>
    <string name="_56_chapter">56 Chapter</string>
    <string name="_20_12_2022">20-12-2022</string>
    <string name="student_name">Student Name</string>
    <string name="_9876543210">9876543210</string>
    <string name="_8989780888">8989780888</string>
    <string name="profile">Profile</string>
    <string name="my_packages">My Packages</string>
    <string name="quizzes">Quizzes</string>
    <string name="agent_report">Agent Report</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_and_support">Help and Support</string>
    <string name="logout">Logout</string>
    <string name="veer_gupta">Veer Gupta</string>
    <string name="emperor">Emperor</string>
    <string name="agent_s_details">Agent\'s Details</string>
    <string name="amount_earnred">Amount Earned</string>
    <string name="amount_received">Amount Received</string>
    <string name="amount_outstsnding">Amount Outstanding</string>
    <string name="tax_deducted">Tax Deducted</string>
    <string name="_30_review">Review</string>
    <string name="description">Description</string>
    <string name="video">Video</string>
    <string name="pdf">Pdf</string>
    <string name="review">Review</string>
    <string name="lorem_ipsum_is_typically_a_corrupted_version_of_de_finibus_bonorum_et_malorum_a_1st_century_bc_text_by_the_roman_statesman_and_philosopher_cicero_with_words_altered_added_and_removed_to_make_it_nonsensical_and_improper_latin">Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical and improper Latin.</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="agent_name">Agent Name</string>
    <string name="rank">Rank</string>
    <string name="upstream_name">UpStream Name</string>
    <string name="downline_name">Downline Stream</string>
    <string name="d_1">D - 1</string>
    <string name="d_2">D - 2</string>
    <string name="title">Title</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="trending">Trending</string>
    <string name="advanced_vacabulary_new">Advanced Vacabulary New</string>
    <string name="jafar_khan">Jafar Khan</string>
    <string name="_2">2</string>
    <string name="downline_chart">Downline Chart</string>
    <string name="pdf_name">Pdf name</string>
    <string name="_20_04_2022">20-04-2022</string>
    <string name="vijay_gupta">Vijay Gupta</string>
    <string name="_20_09_2002">20-09-2002</string>
    <string name="in_publishing_and_graphic_design_lorem_ipsum_is_a_placeholder_text_commonly_used_to_demonstrate">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate.</string>
    <string name="video_name">Video name</string>
    <string name="general_packages">General Packages</string>
    <string name="rs">₹</string>
    <string name="search_vocab_or_grammar">Search vocab or grammar</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="otp_sent_to">OTP Sent To</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="change_mob">Change mob.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_massage">Are you sure you want to logout?</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="_75_ncompleted">75%\nCompleted</string>
    <string name="quiz_analysis">Quiz Analysis</string>
    <string name="_7">7</string>
    <string name="correct">Correct</string>
    <string name="_5">5</string>
    <string name="incorrect">Incorrect</string>
    <string name="_8">8</string>
    <string name="skipped">Skipped</string>
    <string name="review_quiz">Review Quiz</string>
    <string name="rate_this_package">Rate this package</string>
    <string name="start">GOT IT</string>
    <string name="delete_massage">Are you sure you want delete package?</string>
    <string name="quiz_massage">Are you sure you want exit this quiz?</string>
    <string name="comments">Comments</string>
    <string name="make_me_better">Make Me Better</string>
    <string name="free">Free</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="history">History</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="message_description">Message Description</string>
    <string name="answered">Answered</string>
    <string name="s">S</string>
    <string name="enter_promocode">Enter Promocode</string>
    <string name="apply">Apply</string>
    <string name="select_item">Select Item</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="check_out">Check Out</string>
    <string name="my_cart">My Cart</string>
    <string name="_0">0</string>
    <string name="title_of_video">Title Of Video</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="see_more">See More</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About Us</string>
    <string name="downline_one">Downline One</string>
    <string name="downline_two">Downline Two</string>
    <string name="downline_three">Downline Three</string>
    <string name="downline_four">Downline Four</string>
    <string name="share_our_app_to_get_free_subscription">Share the app to get free subscription.</string>
    <string name="social_media_sharing">Social media sharing</string>
    <string name="amount">Amount</string>
    <string name="q_1_adfhbc">Q.1 Adfhbc</string>
    <string name="existing_user_sign_in">Existing User Sign in</string>
    <string name="select_school">Select School</string>
    <string name="hssss">We found him/her sincer, hardwoking, dedicated and result oriented and successfully completed the course.</string>
    <string name="internalservererror">We\'re sorry, The App is under maintenance please try again after some time.
    In the meantime do check this video to improve your skills.</string>
    <string name="nointernetdesc">Make sure wifi or cellular data is turned on and then try again.</string>
    <string name="track_selection_title">Video Quality</string>
    <string name="selectclass">Select Class</string>
</resources>