<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/bg_edit"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="@dimen/_40ssp"
            android:layout_height="@dimen/_40ssp"
            android:text="@string/s"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/white"
            android:background="@drawable/bg_orange_circle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvHistoryDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_description"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tvAnswerHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answered"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>