<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:minHeight="@dimen/_70sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:tint="@android:color/white" />

        <TextView
            android:id="@+id/mobilenotxt"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/otp_sent_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etYourOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:inputType="number"
        android:background="@drawable/bg_edit"
        android:fontFamily="@font/googlesans_regular"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_dark_grey"
        android:textSize="@dimen/_14sdp"/>

    <LinearLayout
        android:id="@+id/lyt_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:text="@string/submit"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/color_faa739"
            android:id="@+id/resendotptxt"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/resend_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
