<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.MoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/llMyAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_user_icon"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_account"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llMyPackages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_my_packages"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_packages"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_quiz"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizzes"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_share"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_privacy"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_privacy"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_help"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_and_support"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llAgent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_agent"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agent_report"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/logout"
                    android:tint="@color/color_light_orange_1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>