<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_app_background"
        android:clickable="true"
        android:focusable="true"
        tools:context=".QuizActivity">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:orientation="vertical"
            android:background="@drawable/ic_bg_blue_1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_would_you_like_to"
                    android:textColor="@color/white"
                    android:fontFamily="@font/googlesans_medium"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_20sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play_quiz_topic"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:fontFamily="@font/googlesans_bold"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_20sdp"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/rlHeader"
            android:layout_above="@+id/tvPayNow_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvPayNow_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/ic_pay_now_btn"
            android:fontFamily="@font/googlesans_regular"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/play_quiz"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>
</layout>
